turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:3: error: object java.awt.Color is not a value
	var C = new Array(Color)
                          ^LangtonsAnt:4: error: type mismatch;
 found   : Char.type
 required: Int
	var A = new Array(Char)
                          ^