turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
	var C = new Array(Color)
	var A = new Array(Char)
	 
}
